kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: innexar-platform
  labels:
    name: innexar-platform
